fixed z-index of fullscreen editor

--- a/src/scss/cm.scss
+++ b/src/scss/cm.scss
@@ -19,6 +19,9 @@
 .CodeMirror-hint {
 	max-width: 30em;
 }
+.yasqe.CodeMirror-fullscreen {
+	z-index: 22222;
+}
 
 
 
